[package]
name = "rustwasm"
authors = ["skkugoon"]
description = "Sample practice with wasm-pack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# By specifying 'crate-type = ["cdylib"], we are telling the 
# Rust compiler that the cratebeing compiled should produce a dynamic library. '
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.73"